blog/blog-ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: n4mlz.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: blog-service
                port:
                  number: 80
